--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img src="./assets/github.png">
                     Github
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://linkedin.com/alan-sumiya">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/alan-sumiya/">
                     <img src="./assets/linkedin.png">
                     Linkedin
                 </a>
